Add Schema.org event data to listing and detail page

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -14,7 +14,7 @@
     @if(event.isSoldOut) {
         <button class="action action--disabled js-ticket-cta" disabled="disabled">Sold Out</button>
     } else {
-        <a class="action action--event-buy js-ticket-cta" href="/event/@event.id/buy">Buy tickets</a>
+        <a class="action action--event-buy js-ticket-cta" href="/event/@event.id/buy" itemprop="url">Buy tickets</a>
     }
     <div class="terms-info">By proceeding, you agree to the<br /> Guardian Live events
         <a href="@Config.guardianLiveEventsTermsUrl" target="_blank">Terms and Conditions</a>
@@ -31,6 +31,7 @@
 }
 
 @main("Event Detail | " + event.name.text, pageInfo=pageInfo, containerPadding = false, isBrochure = true, htmlClass = "js-event") {
+
     <div class="event-header">
         <div class="event-header__container">
             <div class="event-masthead u-cf">
@@ -87,16 +88,16 @@
     </div>
 
 
-    <div class="event-content">
+    <div class="event-content" itemscope itemtype="http://schema.org/Event">
 
-        <div class="event-content__image">
+        <div class="event-content__image" itemprop="image" content="@Config.eventImageUrlPath(event.id)/940.jpg">
             <div class="delayed-image-load" data-src="@Config.eventImageUrlPath(event.id)/{width}{pixel_ratio}.jpg" data-alt="Please upload an event image" data-class="responsive-img"></div>
         </div>
 
         <div class="event-content__container u-cf">
 
             <div class="event-content__body">
-                <div class="event__description">@Html(event.description.getOrElse(EBRichText("foobar", "foobarhtml")).cleanHtml)</div>
+                <div class="event__description" itemprop="description">@Html(event.description.getOrElse(EBRichText("foobar", "foobarhtml")).cleanHtml)</div>
                 <div class="event__social">
                     <div class="event__social-header hidden-mobile">Share this</div>
                     @fragments.social(eventDetail(event))
@@ -104,21 +105,21 @@
             </div>
 
             <div class="event-content__info">
-                <div class="event-content__name">@event.name.text</div>
+                <div class="event-content__name" itemprop="name">@event.name.text</div>
                 <div class="event-content__time event-content--line-divider u-cf">
                     <div class="event-content__first">
                         <i class="icon-sprite icon-sprite-large-early_booking icon-sprite--small"></i>
                     </div>
-                    <div class="event-content__second">@prettyDateWithTimeAndDayName(event.start)</div>
+                    <div class="event-content__second" itemprop="startDate" content="@event.start">@prettyDateWithTimeAndDayName(event.start)</div>
                 </div>
-                <div class="event-content__location event-content--line-divider u-cf">
+                <div class="event-content__location event-content--line-divider u-cf" itemprop="location" itemscope itemtype="http://schema.org/Place">
                     <div class="event-content__first">
                         <i class="icon-sprite icon-sprite-location icon-sprite--small"></i>
                     </div>
                     <div class="event-content__second">
-                        <span class="event-content__venue-name">@event.venue.name</span>
+                        <span class="event-content__venue-name" itemprop="name">@event.venue.name</span>
                         @if(event.eventAddressLine.nonEmpty) {
-                            <span class="event-content__address">@event.eventAddressLine</span>
+                            <span class="event-content__address" itemprop="address">@event.eventAddressLine</span>
                         }
                     </div>
                 </div>
@@ -127,7 +128,13 @@
 
                     @for(ticket <- event.generalReleaseTicket) {
 
-                        <div class="event-content__tickets event-content--line-divider u-cf">
+                        <div class="event-content__tickets event-content--line-divider u-cf" itemprop="offers" itemscope itemtype="http://schema.org/AggregateOffer">
+                            @if(event.isSoldOut) {
+                                <meta itemprop="availability" content="http://schema.org/SoldOut">
+                            } else {
+                                <meta itemprop="availability" content="http://schema.org/InStock">
+                            }
+
                             @fragments.event.ticketSales(event, ticket)
 
                             @if(ticket.free) {
@@ -137,11 +144,11 @@
                             } else {
                                 @for(pricing <- ticket.cost) {
                                     <div class="event-content__price event-content--line-divider">
-                                        <span class="event-content__price-amount js-event-price">@pricing.formattedPrice</span>
+                                        <span class="event-content__price-amount js-event-price" itemprop="highPrice">@pricing.formattedPrice</span>
                                     </div>
                                     <div class="event-content__trail">
                                         <span class="event-content__trail-tag js-event-price-tag">Partners/Patrons </span>
-                                        <span class="event-content__trail-upsell js-event-price-discount">@pricing.discountPrice</span>
+                                        <span class="event-content__trail-upsell js-event-price-discount" itemprop="lowPrice">@pricing.discountPrice</span>
                                         <span class="event-content__trail-saving js-event-price-saving"> (save @pricing.savingPrice)</span>
                                     </div>
                                 }
