--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -1,4 +1,4 @@
-@(event: model.Eventbrite.EBEvent, isHero: Boolean = false)
+@(event: model.Eventbrite.RichEvent, isHero: Boolean = false)
 @import views.support.Dates._
 @import configuration.Config
 @import model.Eventbrite._
@@ -6,7 +6,7 @@
 <li class="event-item @if(!isHero){events-list__item} @if(isHero){event-item--hero}">
             <div class="event-item__media">
                 <a href="/event/@event.id">
-                    <div class="delayed-image-load" data-src="@Config.eventImageUrlPath(event.id)/{width}{pixel_ratio}.jpg" data-alt="@event.name.text" data-class="responsive-img"></div>
+                    <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="@event.name.text" data-class="responsive-img"></div>
                 </a>
             </div>
             <div class="event-item__meta">
