--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -1,4 +1,4 @@
-@(event: model.Eventbrite.EBEvent, pageInfo: model.PageInfo)
+@(event: model.Eventbrite.RichEvent, pageInfo: model.PageInfo)
 
 @import play.twirl.api.Html
 
@@ -90,7 +90,7 @@
     <div class="event-content">
 
         <div class="event-content__image">
-            <div class="delayed-image-load" data-src="@Config.eventImageUrlPath(event.id)/{width}{pixel_ratio}.jpg" data-alt="Please upload an event image" data-class="responsive-img"></div>
+            <div class="delayed-image-load" data-src="@event.imgUrl" data-alt="Please upload an event image" data-class="responsive-img"></div>
         </div>
 
         <div class="event-content__container u-cf">
