--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -1,5 +1,8 @@
 @(eventPortfolio: model.EventPortfolio, pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
 
 @main("Events", containerPadding=false, htmlClass="events-bg theme--masterclass", pageInfo=pageInfo) {
-    @views.html.event.list(eventPortfolio, pageInfo)
+    @views.html.event.list(eventPortfolio, pageInfo) {
+        A unique programme of learning embedded within one of the world's most forward-thinking media
+        organisations.
+    }
 }
