--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -236,8 +236,8 @@ $white-trans: rgba(255, 255, 255, .5);
 
 $mem-live-top: #b51800;
 $mem-live-accent: #cc2b12;
-$mem-mc-top: #b58600;
-$mem-mc-accent: #f1b300;
+$mem-mc-top: #ffbb00;
+$mem-mc-accent: #fcdd03;
 
 $mem-underline-white-trans: rgba(229, 208, 212, .5);
 $mem-event-button-hover: rgba(0, 0, 0, .65);
