Add end date to masterclasses

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -2,7 +2,6 @@
 
 @main("Events", containerPadding=false, htmlClass="events-bg theme--masterclass", pageInfo=pageInfo) {
     @views.html.event.list(eventPortfolio, pageInfo) {
-        A unique programme of learning embedded within one of the world's most forward-thinking media
-        organisations
+        A unique programme of learning within one of the world's most forward-thinking media organisations
     }
 }
