Fix missing schema.org from bad merge

--- a/frontend/app/views/fragments/event/ticketSales.scala.html
+++ b/frontend/app/views/fragments/event/ticketSales.scala.html
@@ -21,7 +21,7 @@
 
 @event match {
     case _: GuLiveEvent => {
-        <div class="event-content__tickets event-content--line-divider u-cf">
+        <div class="event-content__tickets event-content--line-divider u-cf" itemprops="offers" itemscope itemtype="http://schema.org/AggregateOffer">
             <div class="event-content__sale-dates u-cf">
                 <div class="event-content__first">
                     <i class="icon-sprite icon-sprite-book_tickets icon-sprite--small"></i>
