Always show share buttons in colour

--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -61,7 +61,7 @@
 
     <section class="content__container content__container--slim">
         <h2 class="content__headline">Tell your friends</h2>
-        @fragments.social(eventThankyou(event), colourSprites=true)
+        @fragments.social(eventThankyou(event))
     </section>
 
     <section class="content__container content__container--slim hidden-print">
