--- a/frontend/app/views/fragments/social.scala.html
+++ b/frontend/app/views/fragments/social.scala.html
@@ -1,4 +1,4 @@
-@(social: views.support.Social, colourSprites: Boolean = false)
+@(social: views.support.Social)
 
 @import configuration.Config
 
@@ -6,24 +6,24 @@
         <li class="social__item">
             <a class="social__action" target="_blank" href="mailto:?subject=@social.encodedEmailSubject&amp;body=@social.encodedEmailMessage">
                 <span class="u-h">Share via Email</span>
-                <span class="social-icon @if(colourSprites){social-icon--colour}">
-                    <i class="icon-sprite icon-sprite-share-email@if(colourSprites){-colour}"></i>
+                <span class="social-icon">
+                    <i class="icon-sprite icon-sprite-share-email-colour"></i>
                 </span>
             </a>
         </li>
         <li class="social__item">
             <a class="social__action" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=@social.encodedFacebookUrl">
                 <span class="u-h">Share on Facebook</span>
-                <span class="social-icon @if(colourSprites){social-icon--colour}">
-                    <i class="icon-sprite icon-sprite-share-facebook@if(colourSprites){-colour}"></i>
+                <span class="social-icon">
+                    <i class="icon-sprite icon-sprite-share-facebook-colour"></i>
                 </span>
             </a>
         </li>
         <li class="social__item">
             <a class="social__action" target="_blank" href="https://twitter.com/intent/tweet?text=@social.encodedTwitterMessage&amp;related=@Config.twitterUsername">
                 <span class="u-h">Share on Twitter</span>
-                <span class="social-icon @if(colourSprites){social-icon--colour}">
-                    <i class="icon-sprite icon-sprite-share-twitter@if(colourSprites){-colour}"></i>
+                <span class="social-icon">
+                    <i class="icon-sprite icon-sprite-share-twitter-colour"></i>
                 </span>
             </a>
         </li>
